--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <!-- Start-video -->
     <div class="video">
         <video autoplay muted loop>
-            <!-- <source src="images/awesome-video.mp4" type="video/mp4" /> -->
+            <source src="images/awesome-video.mp4" type="video/mp4" />
         </video>
         <div class="content">
             <h2>super awesome video here</h2>
