--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <nav>
                 <ul class="up">
                     <li><a href="#" class="active">home</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">pricing</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="#services">services</a></li>
+                    <li><a href="#portfolio">portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#pricing">pricing</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
             <div class="search"><i class="fa-solid fa-magnifying-glass"></i></div>
@@ -45,7 +45,7 @@
     </header>
     <!-- End-Header -->
     <!-- Start-Landing -->
-    <div class="main">
+    <div class="main" id="home">
         <div class="text">
             <div class="content">
                 <h1>Hello World! <br> We Are Kasper We Make Art.</h1>
@@ -60,7 +60,7 @@
     </div>
     <!-- End-Landing -->
     <!-- Start-Services -->
-    <div class="services">
+    <div class="services" id"services">
         <div class="container">
             <h1 class="special-heading">services</h1>
             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
@@ -129,7 +129,7 @@
     </div>
     <!-- End-design -->
     <!-- Start-Portfolio -->
-    <div class="portfolio">
+    <div class="portfolio" id ="portfolio">
         <h2 class="special-heading">PORTFOLIO</h2>
         <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
         <div class="content">
@@ -217,7 +217,7 @@
     </div>
     <!-- End-video -->
     <!-- Start-About -->
-    <div class="about">
+    <div class="about" id ="about">
         <div class="container">
             <h2 class="special-heading">ABOUT US</h2>
             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
@@ -321,7 +321,7 @@
     </div>
     <!-- End-quote -->
     <!-- Start-prices -->
-    <div class="prices">
+    <div class="prices" id ="pricing">
         <div class="container">
             <h2 class="special-heading">PRICING</h2>
             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
@@ -407,7 +407,7 @@
     </div>
     <!-- End-subscribe -->
     <!-- Start-Contact -->
-    <div class="contact">
+    <div class="contact" id ="contact">
         <div class="container">
             <h2 class="special-heading">CONTACT US</h2>
             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
@@ -439,7 +439,7 @@
     <!-- Start-Footer -->
     <footer>
         <div class="container">
-            <a href=""><img src="icons&logos/logo.png" alt="logo" class="logo"></a>
+            <a href="#home"><img src="icons&logos/logo.png" alt="logo" class="logo"></a>
             <div class="social">
                 <p>WE ARE SOCIAL</p>
                 <ul class="s-links">
